<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/color_Primary"
    tools:context=".activity.SignUpTypeChooseActivity"
    android:gravity="center"
    >

    
    





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp_hello"
                android:textColor="@color/color_text"
                android:textSize="32sp"
                android:textStyle="bold"
                />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signUp_describe"
        android:textColor="@color/color_text"

        android:textSize="20sp"
        android:textStyle="normal" />

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"

                android:layout_marginBottom="20dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUpType_BTN_dogOwner"
                    android:text="@string/signUp_dogOwner_register"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"

                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/button_background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUpType_BTN_dogSitter"
                    android:text="@string/signUp_dogSitter_register"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"

                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/button_background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>





        </LinearLayout>
            <TextView
                android:id="@+id/signUpType_LBL_backBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/signUp_already_register"
                android:textColor="@color/color_secondary"
                android:textStyle="bold"
                android:gravity="center"/>



</LinearLayout>